--- a/My_Work/index.html
+++ b/My_Work/index.html
@@ -9,7 +9,7 @@
 </head>
 <div class="container">
     <div class="header">
-    <img class="logo" src="images/AS logo.png">
+    <img class="logo" src="images/Anna's logo.png">
     <ul>
     <li>ABOUT</li>
     <li>WORK</li>
