--- a/My_Skills/index.html
+++ b/My_Skills/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <img id="logo" src="images/AS logo.png">
+        <img id="logo" src="images/Anna's logo.png">
         <ul>
             <li>ABOUT</li>
             <li>WORK</li>
